# GWProt

./: .gitignore  Dockerfile  Example_1.ipynb  Gromov-Wasserstein for Protein Morphology.txt  LICENSE  README.md  README.rst  pymol_test.py  pyproject.toml  scrap1.ipynb  testing2.ipynb  testout.pse
Examples/: Example 1 - Comparing KRAS Proteins.ipynb  Example 1 Comparing KRAS Proteins.ipynb  Example 2 - Clustering RdRps.ipynb  Example 2.ipynb  Example 3 - Circular Permutations.ipynb  Example3.pse
deprecated code/: misc_stuff.py  switch_probs.py  weighted_alignment.py
deprecated stuff/: 1hq0.cif  Example 1 Comparing KRAS Proteins.ipynb  FGW_protein Tester copy.ipynb  FGW_protein Tester.ipynb  GWstress.py  Gromov-Wasserstein for Protein Morphology.txt  IdInit.py  _FGW_protein_deprecated.py  _GW_stress.py  __GW_stress.py  pymol_protein_viewer.py  pymol_tmalign_wrapper_Copy1.py  switch_probs.py  test1.ipynb  test_script.py  testing2.ipynb  testing3.ipynb
docs/: FGW_matrices.rst  FGW_protein.rst  FGW_protein_pI.rst  GW_protein.rst  GW_protein_pI.rst  GW_stresses.rst  conf.py  distortion_scaling.rst  docker.rst  fused_gromov_wasserstein.rst  gromov_wasserstein.rst  index.rst  isoelectric_points.rst  pymol_protein_viewer.rst  requirements.txt  stress _comparison  stress.rst  stress_comparison.rst  switch_probabilities.rst  switch_probs.rst  weighted_alignment.rst
documentation/: Gromov-Wasserstein for Protein Morphology.txt
src/: FGW_matrices.py  FGW_protein.py  FGW_protein_deprecated.py  FGW_protein_pI.py  GW_scripts.py  GW_stress.py  GWstress.py  IdInit.py  (+8 more)
(+120 files in other folders)
