[build-system]
# Minimum requirements for the build system to execute
requires = [
    "setuptools >= 70",
	 "pip>=24",
	 "wheel",
	 "Cython>=3",
	 "numpy",
     "POT",
     "typing"
	 ]
# What should the build-backend be?
build-backend = "setuptools.build_meta"



[project]
name = "GWProt"
version = "0.0.1"
authors = [{name = "Elijah Gunther", email = "elijah.gunther@pennmedicine.upenn.edu"}]
classifiers=[
    'Programming Language :: Python :: 3',
    'Framework :: Jupyter',
    'Topic :: Scientific/Engineering :: Bio-Informatics'
    ]




dependencies = [
    "numpy",
	"cython >= 3",
    "scipy>=1.10",
    "umap-learn>=0.5.3",
    "sparse",
    "Bio",
    "blosum",
    "POT",
    "statistics",
    "cajal",
    "scikit-learn",
    "multiprocess",
    "threadpoolctl",
    "typing"
	]

[project.urls]
git-repo="https://github.com/CamaraLab/GWProt"